--- a/WebButik/WebButik.csproj
+++ b/WebButik/WebButik.csproj
@@ -195,6 +195,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\IdDbContext\201806261423421_InitialCreate.cs" />
+    <Compile Include="Migrations\IdDbContext\201806261423421_InitialCreate.Designer.cs">
+      <DependentUpon>201806261423421_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\IdDbContext\Configuration.cs" />
     <Compile Include="Migrations\MyDbContext\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ButikDB.cs" />
@@ -288,6 +293,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\IdDbContext\201806261423421_InitialCreate.resx">
+      <DependentUpon>201806261423421_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
