--- a/WebButik/WebButik.csproj
+++ b/WebButik/WebButik.csproj
@@ -328,7 +328,8 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Admin\_AdminView.cshtml" />
-    <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\_productList.cshtml" />
+    <Content Include="Views\Admin\_create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
